k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost
  labels:
    app.kubernetes.io/name: ghost
    app.kubernetes.io/part-of: project-ghost
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
  labels:
    app.kubernetes.io/name: flux
